--- a/build.gradle
+++ b/build.gradle
@@ -5,7 +5,7 @@ plugins {
 }
 
 group = 'com.codescience'
-version = '0.0.1-SNAPSHOT'
+version = '1.0.0'
 sourceCompatibility = '11'
 
 configurations {
@@ -21,9 +21,10 @@ repositories {
 dependencies {
 	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
 	implementation 'org.springframework.boot:spring-boot-starter-web'
-	implementation 'org.apache.commons:commons-lang3:3.12.0'
-	// https://mvnrepository.com/artifact/commons-codec/commons-codec
-	implementation 'commons-codec:commons-codec:1.15'
+	implementation 'org.springframework.boot:spring-boot-starter-thymeleaf'
+	implementation 'com.squareup.okhttp3:okhttp'
+	implementation 'com.google.code.gson:gson'
+	implementation 'commons-codec:commons-codec'
 	compileOnly 'org.projectlombok:lombok'
 	developmentOnly 'org.springframework.boot:spring-boot-devtools'
 	runtimeOnly 'org.postgresql:postgresql'
