--- a/app.json
+++ b/app.json
@@ -3,7 +3,7 @@
     "description": "This is a Java demo application for showing how to run a Spring Boot application on Heroku and expose it via Canvas in Salesforce.",
     "repository": "https://github.com/CodeScience/java-heroku-canvas-demo",
     "image": "heroku/gradle",
-    "addons": [ "heroku-postgresql" ],
+    "addons": [ "heroku-postgresql:essential-0" ],
     "env": {
         "OAUTH_UAF_CONSUMER_KEY": "21B5054D4C9D53D...",
         "OAUTH_WSF_CONSUMER_KEY": "21B5054D4C9D53D...",
